openfront/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: open-front
  namespace: open-front
spec:
  replicas: 1
  selector:
    matchLabels:
      app: open-front
  template:
    metadata:
      labels:
        app: open-front
    spec:
      containers:
      - name: open-front
        image: docker.lab.qstetten.de/open_front:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
      imagePullSecrets:
      - name: regcred
spec:
  containers:
    - name: openfront
      image: openfrontio/openfront:latest
      ports:
        - containerPort: 3000
