openfront/service.yml
apiVersion: v1
kind: Service
metadata:
  name: open-front
  namespace: open-front
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: open-front
